gcc/testsuite/rust/rustc/ui/parser/issue-5544-a.rs
fn main() {
    let __isize = 340282366920938463463374607431768211456; // 2^128
// { dg-error "" "" { target *-*-* } .-1 }
}

